--- a/style.css
+++ b/style.css
@@ -1,16 +1,22 @@
 /* Reset some default browser styles */
-body, h1, h2, p {
+body, h1, h2, p,a{
     margin: 0;
     padding: 0;
+    text-decoration: none;
+}
+a {
+    color:black;
 }
 
 /* Apply a dark background color to the body */
 body {
     font-family: Arial, sans-serif;
+    background-color: #fffcf2;
 }
 header {
     padding: 1rem;
-    background-color: #fffcf2;
+    background-color: rgba(0, 0, 0, 0.814);
+    color: #fffcf2;
 }
 
 .profilPhoto {
