--- a/style.css
+++ b/style.css
@@ -1,30 +1,19 @@
 /* Reset some default browser styles */
+html {
+    background-color: #16161a;
+    font-family: Arial, Helvetica, sans-serif;
+}
 body, h1, h2, p,a{
     margin: 0;
     padding: 0;
     text-decoration: none;
 }
-a {
-    color:black;
-}
-
-/* Apply a dark background color to the body */
-body {
-    font-family: Arial, sans-serif;
-    background-color: #fffcf2;
-}
-header {
+header{
     padding: 1rem;
-    background-color: rgba(0, 0, 0, 0.814);
-    color: #fffcf2;
-}
-
-.profilPhoto {
-    margin-right: 10%;
-    width: 100px;
-    height: 125px;
-    border-radius: 3px;
-    box-shadow: rgb(0, 0, 0) 0px 3px 8px;
+    display: flex;
+    color:#fffffe;
+    justify-content: space-evenly
+    align-items: center;
 }
 
 
