--- a/style.css
+++ b/style.css
@@ -16,5 +16,23 @@ header{
     align-items: center;
 }
 
+.Part1 {
+    color: #94a1b2;
+}
 
- 
+
+.fade-in {
+    opacity: 0;
+    animation: fade-in-animation 1.5s ease-in-out forwards;
+  }
+  
+  @keyframes fade-in-animation {
+    from {
+      opacity: 0;
+      transform: translateX(-10px);
+    }
+    to {
+      opacity: 1;
+      transform: translateX(0);
+    }
+  }
