--- a/style.css
+++ b/style.css
@@ -1,1 +1,75 @@
-/* Reset some default browser styles */
+.container {
+    display: flex;
+    justify-content:space-evenly;
+    align-items: center;
+    padding: 30px;
+}
+.container2 {
+  display: flex;
+  align-items: flex-start;
+}
+.box {
+  padding: 20px;
+  display: flex;
+  justify-content: end;
+}
+.original-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    line-height: 1;
+    text-decoration: none;
+    color: #051C24;
+    font-size: 18px;
+    border-radius: 5px;
+    width: 200px;
+    height: 40px;
+    border: 1px solid #051C24;
+    position: relative;
+    transition: 0.3s;
+    background-color: #04BBFF;
+  }
+  
+  .original-button::before, .original-button::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 50%;
+    right: 15px;
+    transform-origin: 100% 50%;
+    height: 1px;
+    width: 11px;
+    background-color: #051C24;
+    border-radius: 2px;
+    will-change: transform;
+    transition: .3s;
+  }
+  
+  .original-button::before {
+    transform: translateY(-50%) rotate(30deg);
+  }
+  
+  .original-button::after {
+    transform: translateY(-50%) rotate(-30deg);
+  }
+  
+  .original-button:hover::before {
+    transform: translate(5px, -50%) rotate(30deg);
+  }
+  
+  .original-button:hover::after {
+    transform: translate(5px, -50%) rotate(-30deg);
+  }
+
+a{
+    color: inherit;
+    text-decoration: none
+}
+
+.position-left {
+  padding-left: 33%;
+}
+
+.position-left2 {
+  padding-left: 28%;
+}
