--- a/style.css
+++ b/style.css
@@ -1,18 +1,3 @@
-.container {
-    display: flex;
-    justify-content:space-evenly;
-    align-items: center;
-    padding: 30px;
-}
-.container2 {
-  display: flex;
-  align-items: flex-start;
-}
-.box {
-  padding: 20px;
-  display: flex;
-  justify-content: end;
-}
 .original-button {
     display: flex;
     align-items: center;
@@ -65,11 +50,57 @@ a{
     color: inherit;
     text-decoration: none
 }
-
-.position-left {
-  padding-left: 33%;
+.btnPosition{
+  display: flex;
+  justify-content: end;
+  padding: 50px;
+}
+.intro {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.contactInfo {
+  padding-left: 25%;
+}
+.title {
+  padding-top: 2%;
+  padding-left: 25%;
 }
 
-.position-left2 {
-  padding-left: 28%;
+.text {
+  padding-left: 30%;
+  width: 40%;
+}
+.pp {
+  height: 200px;
+  border-radius: 20px;
+}
+.imgProject {
+  width: 40%;
+  padding-left: 30%;
+}
+@media (max-width: 800px) {
+  .btnPosition {
+    justify-content: center;
+  }
+  .text {
+    padding-left: 10%;
+    width: 80%;
+  }
+  .imgProject {
+    width: 80%;
+    padding-left: 10%;
+    
+  }
+
+}
+@media (max-width: 400px) {
+  .pp{
+    height: 100px;
+  }
+  .name {
+    font-size: smaller;
+  }
+
 }
