--- a/site/styles.css
+++ b/site/styles.css
@@ -1,94 +1,171 @@
 body {
-    background-color: #222;
+    background-color: #333;
     cursor: pointer;
   }
-  
-  #container {
-    max-width: 1024px;
-    margin: auto;
-  }
-  
-  #monitor {
-      background: #000; 
-      position: relative;
-      border-top: 3px solid #888; 
-      margin: 5%;
-      padding: 2% 2% 4% 2%; 
-      border-radius: 10px; 
-      border-bottom-left-radius: 50% 2%; 
-      border-bottom-right-radius: 50% 2%; 
-      transition: margin-right 1s;
-  }
-  
-  #monitor:after {
-      content: '';
-      display: block;
-      position: absolute;
-      bottom: 3%;
-      left: 36%;
-      height: .5%; 
-      width: 28%;
-      background: #ddd; 
-      border-radius: 50%; 
-      box-shadow: 0 0 3px 0 white; 
-  }
-  
-  #monitorscreen {
-      position: relative;
-      
-      background-position: top center;
-      height: 0; 
-      padding-bottom: 56.25%; 
-      position: relative;
-      overflow: hidden;
-      cursor: default;
-      color: #43DB45;
-  }
-  
-  
-  @media all and (min-width: 960px) {
-      #monitor {
-          -webkit-animation: tvflicker .2s infinite alternate; 
-          -moz-animation:    tvflicker .5s infinite alternate; 
-          -o-animation:      tvflicker .5s infinite alternate; 
-          animation:         tvflicker .5s infinite alternate; 
-      }
-  
-      @-webkit-keyframes tvflicker {
-        0%   { box-shadow: 0 0 100px 0 rgba(200,235,255,0.4); }
-        100% { box-shadow: 0 0 95px 0 rgba(200,230,255,0.45); }
-      }
-      @-moz-keyframes tvflicker {
-        0%   { box-shadow: 0 0 100px 0 rgba(225,235,255,0.4); }
-        100% { box-shadow: 0 0 60px 0 rgba(200,220,255,0.6); }
-      }
-      @-o-keyframes tvflicker {
-        0%   { box-shadow: 0 0 100px 0 rgba(225,235,255,0.4); }
-        100% { box-shadow: 0 0 60px 0 rgba(200,220,255,0.6); }
-      }
-      @keyframes tvflicker {
-        0%   { box-shadow: 0 0 100px 0 rgba(225,235,255,0.4); }
-        100% { box-shadow: 0 0 60px 0 rgba(200,220,255,0.6); }
-      }
-  }
-
   .intro {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    padding-top: 100px;
+    flex-direction: row-reverse;
+    padding-top: 30px;
+  
   }
 
-  .pp {
-    height: 200px;
-    border-radius: 20px;
-  }
-  .title {
-    padding-top: 2%;
-    padding-left: 25%;
-  }
+
 .terminal {
-    background-image: url("site\images\terminal.jpg");
+    
+    background-image: url('/site/images/terminal.jpg');
     background-size: cover;
     background-position: top center;
+    color: #43DB45;
+    width: 800px;
+    border-radius: 5px;
+    border:  transparent; /* Bordure transparente par défaut */
+    transition: border-color 0.3s;
+    box-shadow: 0 0 0 transparent;
+}
+
+.terminal:hover {
+    border-color: #fff; /* Couleur de surbrillance lors du survol */
+    box-shadow: 0 4px 8px black;
+    cursor: default;
+}
+
+.terminalText {
+    padding-top: 20px;
+    padding-left: 10px;
+    padding-bottom: 100px;
+}
+.ippliImg {
+    border-radius: 5px;
+    height: 400px;
+    border:  transparent; /* Bordure transparente par défaut */
+    transition: border-color 0.3s;
+    box-shadow: 0 0 0 transparent
+    
+}
+.appliImg:hover {
+    border-color: #fff; /* Couleur de surbrillance lors du survol */
+    box-shadow: 0 4px 8px black;
+    cursor: default;
+}
+
+
+  
+  .wrap {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .button {
+    min-width: 150px;
+    min-height: 60px;
+    font-family: 'Nunito', sans-serif;
+    font-size: 22px;
+    text-transform: uppercase;
+    letter-spacing: 1.3px;
+    font-weight: 700;
+    color: #313133;
+    background: #4FD1C5;
+    background: linear-gradient(90deg, rgba(129,230,217,1) 0%, rgba(79,209,197,1) 100%);
+    border: none;
+    border-radius: 1000px;
+    transition: all 0.3s ease-in-out 0s;
+    cursor: pointer;
+    outline: none;
+    position: relative;
+    
+    }
+  
+  button::before {
+  content: '';
+    border-radius: 1000px;
+    min-width: calc(150px + 12px);
+    min-height: calc(60px + 12px);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: all .3s ease-in-out 0s;
+  }
+  
+  .button:hover, .button:focus {
+    color: #313133;
+    transform: translateY(-6px);
+  }
+  
+  button:hover::before, button:focus::before {
+    opacity: 1;
+  }
+  
+  button::after {
+    content: '';
+    width: 30px; height: 30px;
+    border-radius: 100%;
+    border: 6px solid #00FFCB;
+    position: absolute;
+    z-index: -1;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    animation: ring 1.5s infinite;
+  }
+  
+  button:hover::after, button:focus::after {
+    animation: none;
+    display: none;
+  }
+  
+  @keyframes ring {
+    0% {
+      width: 15px;
+      height: 15px;
+      opacity: 1;
+    }
+    100% {
+      width: 100px;
+      height: 100px;
+      opacity: 0;
+    }
+  }
+
+  .btnHire {
+    padding-top: 30px;
+    padding-left: 70%;
+  }
+
+.contactInfo {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding-top: 40px;
+}
+.contactInfo2 {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    
+}
+
+.description {
+    padding-top: 40px;
+    display: flex;
+    justify-content: space-evenly ;
+    align-items: flex-end;
+}
+
+.descriptionImg {
+    border:  transparent; /* Bordure transparente par défaut */
+    transition: border-color 0.3s;
+    box-shadow: 0 0 0 transparent
+
+}
+
+.descriptionImg:hover {
+    border-color: black; /* Couleur de surbrillance lors du survol */
+    box-shadow: 0 16px 30px black;
+    cursor: default;
 }
