--- a/styles.css
+++ b/styles.css
@@ -88,15 +88,35 @@ a {
 
 
 
+/* Masquer les sections */
 section {
-    width: 80%;
-    max-width: 800px;
-    margin:  auto auto 15%;  /* Initially set to 100vh to ensure full view height spacing */
-    padding: 20px;
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%;  /* Ajuster pour mobiles avec une largeur plus petite */
+    max-width: 600px;
+    max-height: 80vh; /* Limiter la hauteur pour éviter de dépasser l'écran */
+    overflow-y: auto; /* Activer le défilement vertical */
+    z-index: 1001;
     background-color: #1e1e1e;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border-radius: 8px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.6);
+    padding: 20px;
+}
 
+/* Style pour le fond semi-transparent */
+.overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    z-index: 1000;
+    opacity: 0;
 }
 
 section h2 {
@@ -118,9 +138,18 @@ section h2 {
 }
 
 @media (max-width: 480px) {
-    .terminal, section {
+    .terminal  {
         width: 80%;
         margin: 55% auto;  /* Adjust margin for smaller screens */
+    }
+
+    section {
+        margin: 55% auto;
+        width: 90vw;      /* Prendre presque toute la largeur de l'écran */
+        height: 100vh;     /* Limiter la hauteur */
+        top: 25%;
+        left: 50%;
+        transform: translate(-50%, -50%); /* Centrer sur l'écran */
     }
 
     .terminal-body {
@@ -141,4 +170,21 @@ section h2 {
         font-size: 10px;
     }
     
+}
+
+
+.close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: #ff5f56;
+    border: none;
+    color: #f8f8f2;
+    font-size: 14px;
+    padding: 5px 10px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.close-button:hover {
+    background-color: #e0463d;
 }
